[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = "0.2.8"
pico-args = { version = "0.5.0", features = ["short-space-opt", "eq-separator"] }
rand = "0.8.5"
rand_xoshiro = "0.6.0"
