[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exr = "1.5.2"
flate2 = "1.0.25"
getrandom = "0.2.8"
image = "0.24.5"
once_cell = "1.16.0"
pico-args = { version = "0.5.0", features = ["short-space-opt", "eq-separator"] }
rand = "0.8.5"
rand_xoshiro = "0.6.0"
time = "0.3.17"
